<resources>
    <string name="app_name">SuperPuperMegaProject</string>
    <string name="storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="storyline_header">Storyline</string>
    <string name="cast_header">Cast</string>
    <string name="movie_title">Avengers: End Game</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="reviews_count">125 REVIEWS</string>
    <string name="back_button_text"><![CDATA[< Back]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_title">Movies list</string>
    <string name="age_13">13+</string>
    <string name="duration">137 MIN</string>
    <string name="text_movie">Movie</string>
    <string name="text_">-</string>
    <string name="hint_search_query">Enter search query…</string>
</resources>