<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/iv_movie_image"
            android:layout_width="match_parent"
            android:layout_height="331dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:contentDescription="@string/movie_title"
            android:contentDescription="@string/text_movie"
            tools:src="@drawable/movie_avangers_end_game_detail" />

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:alpha="1"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@id/iv_movie_image"
            app:layout_constraintEnd_toEndOf="@id/iv_movie_image"
            app:layout_constraintStart_toStartOf="@id/iv_movie_image" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="@dimen/margin_48"
            android:layout_height="@dimen/margin_48"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="8dp"
            android:alpha="0.75"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/back_button_text"
            android:textAppearance="@style/text_apperance"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/movie_title_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="254dp" />

        <TextView
            android:id="@+id/tv_age_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_12"
            android:textAppearance="@style/text_apperance"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/movie_title_guideline"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/age_13" />

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:alpha="0.75"
            android:gravity="center_vertical"
            android:lineSpacingExtra="0sp"
            android:textAppearance="@style/text_apperance.shadowed.movie_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_title_guideline"
            tools:text="@string/movie_title" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/movie_title_barrier_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_movie_name, iv_movie_image"
            tools:layout_editor_absoluteY="331dp" />

        <TextView
            android:id="@+id/tv_tagline"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:alpha="0.75"
            android:gravity="start|center_vertical"
            android:textAppearance="@style/text_apperance.tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_title_barrier_bottom"
            tools:text="@string/tag" />

        <RatingBar
            android:id="@+id/rb_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="4dp"
            android:isIndicator="false"
            android:numStars="5"
            android:progressBackgroundTint="@color/reviews_text_color"
            android:progressTint="@color/tag_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tagline"
            tools:rating="4" />

        <TextView
            android:id="@+id/tv_reviewers_count"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:alpha="0.75"
            android:gravity="center_vertical"
            android:textAppearance="@style/text_apperance.reviews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rb_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_tagline"
            tools:text="@string/reviews_count" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/rating_barrier_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="rb_rating, tv_reviewers_count"
            tools:layout_editor_absoluteY="331dp" />

        <TextView
            android:id="@+id/tv_storyline_header"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:alpha="0.75"
            android:gravity="center_vertical"
            android:text="@string/storyline_header"
            android:textAppearance="@style/text_apperance.shadowed.storyline_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_barrier_bottom" />

        <TextView
            android:id="@+id/tv_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:alpha="0.75"
            android:textAppearance="@style/text_apperance.storyline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_storyline_header"
            tools:text="@string/storyline" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/storyline_barrier_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_storyline"
            tools:layout_editor_absoluteY="331dp" />

        <TextView
            android:id="@+id/tv_cast_header"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/margin_16"
            android:alpha="0.75"
            android:gravity="center_vertical"
            android:text="@string/cast_header"
            android:textAppearance="@style/text_apperance.shadowed.storyline_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline_barrier_bottom" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actors_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_header"
            tools:itemCount="4"
            tools:listitem="@layout/view_holder_actor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>