<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MoviesListFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/margin_44" />

        <ImageView
            android:id="@+id/iv_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:src="@drawable/target"
            app:layout_constraintBottom_toBottomOf="@id/guideline_caption"
            app:layout_constraintEnd_toStartOf="@id/tv_caption"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_caption" />

        <TextView
            android:id="@+id/tv_caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/list_title"
            android:textAppearance="@style/text_apperance"
            app:layout_constraintBottom_toBottomOf="@id/guideline_caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_target"
            app:layout_constraintTop_toBottomOf="@id/guideline_caption" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="iv_target, tv_caption" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@color/background"
            app:cardCornerRadius="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/barrier_caption"
            app:strokeColor="@color/card_border"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movie_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/margin_8" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/margin_8" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="@dimen/margin_8" />

                <ImageView
                    android:id="@+id/iv_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="52dp"
                    android:src="@drawable/movie_for_list"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:alpha="1"
                    android:background="@drawable/gradient"
                    app:layout_constraintBottom_toBottomOf="@id/iv_movie"
                    app:layout_constraintEnd_toEndOf="@id/iv_movie"
                    app:layout_constraintStart_toStartOf="@id/iv_movie" />


                <TextView
                    android:id="@+id/tv_age_limit"
                    android:layout_width="@dimen/age_view_size"
                    android:layout_height="@dimen/age_view_size"
                    android:background="@drawable/rounded_rectangle"
                    android:gravity="center"
                    android:text="@string/age_13"
                    android:textAppearance="@style/text_apperance"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toTopOf="@id/guideline_top" />

                <ImageView
                    android:id="@+id/iv_like"
                    android:layout_width="@dimen/age_view_size"
                    android:layout_height="@dimen/age_view_size"
                    android:foregroundGravity="center"
                    android:scaleType="center"
                    android:src="@drawable/unlike"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintTop_toBottomOf="@id/guideline_top" />

                <TextView
                    android:id="@+id/tv_tagline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:alpha="0.75"
                    android:gravity="start|center_vertical"
                    android:text="@string/tag"
                    android:textAppearance="@style/text_apperance.tag.small"
                    app:layout_constraintBottom_toTopOf="@id/barrier_rating_top"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidline_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_end="60dp" />

                <RatingBar
                    android:id="@+id/rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:max="5"
                    android:progressBackgroundTint="@color/reviews_text_color"
                    android:progressTint="@color/tag_text_color"
                    android:rating="4"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:transformPivotX="0dp"
                    android:transformPivotY="@dimen/margin_8"
                    app:layout_constraintBottom_toBottomOf="@id/guidline_rating"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toTopOf="@id/guidline_rating" />

                <TextView
                    android:id="@+id/tv_reviews"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:alpha="0.75"
                    android:gravity="center_vertical"
                    android:text="@string/reviews_count"
                    android:textAppearance="@style/text_apperance.reviews.small"
                    app:layout_constraintBottom_toBottomOf="@id/guidline_rating"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toTopOf="@id/guidline_rating" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_rating_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:barrierDirection="top"
                    app:constraint_referenced_ids="tv_reviews, rating" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_image_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="iv_movie, rating, tv_reviews" />

                <TextView
                    android:id="@+id/tv_movie_caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/movie_title"
                    android:textAppearance="@style/text_apperance.shadowed.movie_title.small"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toEndOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/barrier_image_bottom" />


                <TextView
                    android:id="@+id/tv_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4"
                    android:alpha="0.75"
                    android:gravity="center_vertical"
                    android:text="@string/duration"
                    android:textAppearance="@style/text_apperance.reviews.small"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_caption" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>